<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="uart.rs232.gpiocontroller.ControlPanelActivity">

  <LinearLayout
      android:id="@+id/linear_layout_0_acp"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="2sp">

    <TextView
        android:id="@+id/text_view_ll_0_acp"
        android:text="@string/text_view_ll_0_acp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"  />

    <RadioGroup
        android:id="@+id/r_group_turn_on_of_ll_0_acp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_view">

        <RadioButton
          android:id="@+id/r_button_turn_on_ll_0_acp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/r_button_turn_on_ll_0_acp"/>

        <RadioButton
          android:id="@+id/r_button_turn_off_ll_0_acp"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:text="@string/r_button_turn_off_ll_0_acp"/>

    </RadioGroup>
  </LinearLayout>


  <LinearLayout
      android:id="@+id/linear_layout_1_acp"
      android:orientation="vertical"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:padding="2sp"
      android:layout_below="@+id/linear_layout_0_acp">

    <TextView
        android:id="@+id/text_view_ll_1_acp"
        android:text="@string/text_view_ll_1_acp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/linear_layout_2_acp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

      <TextView
          android:id="@+id/text_view_ll_2_acp"
          android:layout_weight="2"
          android:layout_width="0dp"
          android:layout_height="fill_parent"
          android:text="@string/text_view_ll_2_acp"
          android:gravity="center"
          android:background="@drawable/background_view"/>

      <ImageButton
          android:id="@+id/button_0_ll_1_acp"
          android:layout_weight="1"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:src="@drawable/get_temperature"
          android:background="@drawable/background_view"/>

    </LinearLayout>
  </LinearLayout>
</RelativeLayout>
